--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "homepage": "https://github.com/icepy/chrome-overapi#readme",
   "dependencies": {
     "@types/chrome": "^0.0.81",
+    "@types/lodash": "^4.14.123",
     "@types/react": "^16.8.12",
     "@types/react-dom": "^16.8.3",
+    "lodash": "^4.17.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
